--- a/app.json
+++ b/app.json
@@ -2,10 +2,11 @@
   "expo": {
     "name": "Lois_Mathema",
     "slug": "Lois_Mathema",
+    "scheme": "Lois_Mathema",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
@@ -23,6 +24,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
