--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
-    "expo": "~52.0.17",
+    "axios": "^1.7.9",
+    "expo": "^52.0.18",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
@@ -25,7 +26,8 @@
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
