--- a/app.json
+++ b/app.json
@@ -5,13 +5,13 @@
     "scheme": "Lois_Mathema",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/splash-icon.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#EDE8E4"
     },
     "ios": {
       "supportsTablet": true
